# ai-de-camp

./: .gitignore  README.md
aidecamp-a2a/: README.md
aidecamp-a2a/webapi/: .env.example  __init__.py  __main__.py  agent.py  agent_executor.py  mock_server.py  models.py  pyproject.toml  requirements-minimal.txt  requirements.txt  turn_manager.py
aidecamp-a2a/webapi/Tests/: test.http
aidecamp-a2a/webapp/: README.md  package-lock.json  package.json
aidecamp-a2a/webapp/public/: index.html  styles.css
aidecamp-a2a/webapp/public/.azure/: config
aidecamp-app/webapi/: Program.cs  aidecamproutes.cs  basicroutes.cs  webapi.csproj  webapi.sln
aidecamp-app/webapi/Tests/: test.http
aidecamp-app/webapi/TurnManager/: Scenario.cs  TurnManager.cs
aidecamp-app/webapi/data/prompts/: prompt.md
aidecamp-app/webapp/: README.md
aidecamp-app/webapp/public/: index.html  web.config
aidecamp-console/: Program.cs  README.md  aidecamp-console.csproj  aidecamp-console.sln
aidecamp-console/Prompts/HandleCombat/: config.json  skprompt.txt
aidecamp-plugins-native-console/: Program.cs  PromptFilter.cs  README.md  aidecamp-plugins-native-console.csproj  aidecamp-plugins-native-console.sln
aidecamp-plugins-native-console/Data/prompts/: prompt.md
aidecamp-plugins-native-console/Data/sample/: combatants_output.json  combatants_schema.json
aidecamp-plugins-native-console/Plugins/Time/: Time.cs
aidecamp-plugins-native-console/Plugins/TurnManager/: TurnManager.cs
aidecamp-plugins-native-console/tests/: AOAItests.cs  BaseTest.cs
aidecamp-simple-prompt/: ChatSetup.json
